--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "matplotlib==3.9.2",
     "pytest-cov==5.0.0",
     "pytest==8.3.3",
+    "python-dotenv==1.0.1",
     "rich==13.8.1",
     "rootutils==1.0.7",
     "tensorboard==2.18.0",
