--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "black==24.8.0",
+    "dvc-gdrive>=3.0.1",
+    "dvc>=3.55.2",
     "gdown==5.2.0",
     "hydra-colorlog==1.2.0",
     "hydra-core==1.3.2",
