dvc repro added, cml github action, generate plots, confusion matrix, report.md, changes in datamodules of catdog and changes in timmclassifier

--- a/configs/experiment/catdog_ex.yaml
+++ b/configs/experiment/catdog_ex.yaml
@@ -13,13 +13,13 @@ defaults:
 seed: 42
 
 model:
-  base_model_name : vit_tiny_patch16_224
+  base_model_name : test_vit.r160_in1k
   num_classes: 2
-  pretrained: False
+  pretrained: True 
 
 trainer:
   min_epochs: 1
-  max_epochs: 2
+  max_epochs: 5
 
 callbacks:
   model_checkpoint:
