--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -7,3 +7,5 @@ log_dir: ${paths.root_dir}/logs/
 output_dir: ${hydra:runtime.output_dir}
 
 work_dir: ${hydra:runtime.cwd}
+
+pred_dir: ${paths.root_dir}/prediction/
