--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -8,13 +8,13 @@ defaults:
 model_checkpoint:
   dirpath: ${paths.output_dir}/checkpoints
   filename: "epoch_{epoch:03d}"
-  monitor: "val_loss"
+  monitor: "val/loss"
   mode: "min"
   save_last: True
   auto_insert_metric_name: False
 
 early_stopping:
-  monitor: "val_loss"
+  monitor: "val/loss"
   patience: 100
   mode: "min"
 
