--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,8 @@ dependencies = [
     "rootutils==1.0.7",
     "tensorboard==2.18.0",
     "timm==1.0.9",
-    "torch==2.4.1",
-    "torchvision==0.19.1",
+    "torch==2.4.1+cpu",
+    "torchvision==0.19.1+cpu",
     "torchviz==0.0.2",
     "scikit-learn>=1.5.2",
     "pandas>=2.2.3",
