--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -37,7 +37,7 @@ jobs:
 
     - name: Pull DVC data
       env:
-        GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+        GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CRED_JSON }}
       run: dvc pull
 
     - name: Train model
