add workflow rerun in sync

--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -2,7 +2,7 @@ name: Train and Report
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, synchronize]
     branches: [ main ]
 
 jobs:
